* enhancements
  * A proc is now accepted by id_column option in json_for_jqgrid method.
  * Allow the column name in the 'order_by' helper to be quoted.
  * View helpers are now tested using ActionView::TestCase.
  * col_model_for_jqgrid is moved from controller helpers to view helpers.

* bug fixes
  * Fixes issue when using id_column in json_for_jqgrid method.

== 1.0.1

* enhancements
  * Add helper to easily create the col_model. (col_model_for_jqgrid)
  * Support prefix in the id column of the json response.
  * Support I18n localization of date fields in the json response.

* bug fixes
  * In 'json_for_jqgrid' method do not return nil if +records+ is empty and return the
    json string in spite of that.

== 1.0.0

* enhancements
  * Support for chained functions.
  * The 'jqgrid' method is renamed and rewritten to fully support calls to jqgrid apis.
  * Get the page number for the json response from the will_paginate resultset.

* bug fixes
  * Fix order_by_from_params when sidx is blank.

== 0.2.0

* enhancements
  * Navigator options fully supported.

* bug fixes
  * Get pager id from the options hash in any of the formats accepted by
    jqGrid.